--- a/templates/shop/item_detail.html
+++ b/templates/shop/item_detail.html
@@ -102,7 +102,7 @@
             <div class="my-3 my-md-auto mx-0 col-md-6 order-3 order-md-3">
                 <h5 class="text-uppercase font-weight-bold">you might also like</h5>
                 <div
-                    class="swiper pb-4 h-100"
+                    class="swiper pb-4 px-lg-4 h-100"
                     v-swiper:swiper="swiperOptions"
                     @click-slide="onSwiperClickSlide"
                     @slide-change-transition-start="onSwiperSlideChangeTransitionStart"
@@ -123,10 +123,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-none d-lg-block swiper-button-prev">
+                    <div class="d-none d-lg-block remove-outline swiper-button-prev">
                         <i class="fas text-black-50 fa-2x fa-angle-left"></i>
                     </div>
-                    <div class="d-none d-lg-block swiper-button-next">
+                    <div class="d-none d-lg-block remove-outline swiper-button-next">
                         <i class="fas text-black-50 fa-2x fa-angle-right"></i>
                     </div>
                     <div class="swiper-pagination swiper-pagination-bullets"></div>
